--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
+  },
+  "scripts": {
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   }
 }
